--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,13 @@
 apply plugin: 'java'
 
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    testCompile group: 'junit', name: 'junit', version: '4.+'
+}
+
 task(runCouponCart, dependsOn: jar, type: JavaExec ) {
     main = 'codingexercises.couponcart.CouponCart'
     classpath = sourceSets.main.runtimeClasspath
